# EcoMerge-AI

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  notes.md  requirements.txt  vercel.json
ESG-demo-main/: README.md
ESG-demo-main/.github/workflows/: cloudflare-pages-deploy.yml
ESG-demo-main/frontend/: README.md  next.config.js  package-lock.json  package.json
api/: index.py
backend/: .env.example  README.md  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/controllers/: auth_controller.py  dashboard_controller.py  department_controller.py  report_controller.py
backend/app/core/: config.py  mail.py  rbac.py  security.py
backend/app/db/: ecosphere.db  session.py
backend/app/models/: __init__.py  erp_models.py
backend/app/repositories/: department_repository.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  dashboard_service.py  notification_service.py  report_service.py
backend/config/: .env.example  pyproject.toml
backend/data/: pymu_iden.py  table_png_extractor.py  test.py
backend/data/sasb_metrics/: Asset_Manage_and_Custody_Activity.json  Auto_Parts.json  Automobiles.json  Car_Rental_and_Leasing.json  E-Commerce.json  Electronic_Manufacturing_Servic.json  Hardware.json  Household_and_Personal_Products.json  Internet_Media_and_Services.json  Investment_Banking_and_Brokerage.json  Multiline_and_Specialty_Retaile.json  apparel_accessories_&_footwear.json  car_rental_&_leasing.json  (+6 more)
backend/debug_notes/: 05-08-25.md  05-10-25.md
backend/migrations/: 001_create_erp_schema.sql  README.md
backend/scripts/: start_backend.py  system_health_check.py
backend/seeds/: seed_erp.py
backend/src/: test_api_key.py  tmp.py
backend/tests/: test_erp_foundation.py
docs/: api.md  architecture.md  database.md  feature-mapping.md  legacy.md  odoo_hackathon_erp_submission.md  roadmap.md  setup.md  ui-screens.md
frontend/: README.md  next.config.js  package-lock.json  package.json
logs/: .gitkeep
outputs/: .gitkeep
scripts/: start_project.py
(+76 files in other folders)
