[tool.poetry]
name = "esg-report-encoding"
version = "0.2.0"
description = "Disclosure-Oriented Report Encoding for ESG Analysis with Dual-Channel Retrieval"
authors = ["ESG Team <team@esg.com>"]
readme = "README.md"
packages = [{include = "esg_encoding", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core web framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
# Data processing
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
# ML/AI
torch = "^2.1.0"
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"
openai = "^1.3.0"
# Document processing
pymupdf = "^1.23.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
# Web utilities
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
python-dotenv = "^1.0.0"
# Utilities
loguru = "^0.7.2"
regex = "^2023.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
black = "^23.11.0"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["esg_encoding"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 